--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
+    <div class="container">
+        <div class="turn"></div>
+        <div class="board"></div>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
