--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="turn"></div>
+        <div class="title">Tic-Tac-Toe</div>
+        <div class="turn">
+            <div class="text"></div>
+            <button class="button">Restart</button>
+        </div>
         <div class="board"></div>
     </div>
     <script src="game.js"></script>
